--- a/Project/index.html
+++ b/Project/index.html
@@ -5,40 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enver</title>
     <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="gradient.css">
+    
 </head>
 <body class="w-full bg-[#19191B]">
     <!--MAIN-->
-    <div class="max-w-[1440px] relative mx-auto px-[120px]">
+    <div class="max-w-[1440px] w-full relative mx-auto flex flex-col items-center overflow-x-hidden">
         <!-- Header -->
-        <div class="flex items-center justify-between mt-[42px] max-w-[1230px] mx-auto w-full">
+        <div class="flex items-center justify-between mt-[42px] max-w-[1200px] mx-auto w-full">
             <div class="max-w-[132px] w-full flex gap-[8px]">
                 <img class="w-[40px] h-[40px]" src="images/Logo Icon 1.svg" alt="">
                 <h1 class="text-[#fff] max-w-[84px] w-full h-[39px] font-montserrat text-[28px] font-bold leading-[140%]">Enver</h1>
             </div>
             <div class="max-w-[401px] w-full flex gap-[40px]">
-                <p class="font-nunito-sans text-[18px] text-[#5454D4] font-medium leading-normal tracking-[-0.5px]">Home</p>
-                <p class="text-[18px] font-normal leading-normal font-nunito-sans text-custom">Services</p>
-                <p class="text-[18px] font-normal leading-normal font-nunito-sans text-custom">Our Project</p>
-                <p class="text-[18px] font-normal leading-normal font-nunito-sans text-custom">About Us</p>
+                <p class="font-nunito-sans text-[18px] cursor-pointer text-[#5454D4] hover:text-[white] font-medium leading-normal tracking-[-0.5px]">Home</p>
+                <p class="text-[18px] font-normal cursor-pointer hover:text-[red] leading-normal font-nunito-sans text-custom">Services</p>
+                <p class="text-[18px] font-normal cursor-pointer hover:text-[red]  leading-normal font-nunito-sans text-custom">Our Project</p>
+                <p class="text-[18px] font-normal cursor-pointer hover:text-[red]  leading-normal font-nunito-sans text-custom">About Us</p>
             </div>
-            <div class="w-[157px] flex items-center border-[1px] border-white rounded-[5px] justify-center">
+            <div class="w-[157px] flex items-center border-[1px] border-white rounded-[5px] justify-center hover:bg-gray-800">
                 <button class="w-[141px] h-[44px] rounded-[5px]">
                     <p class="max-w-[141px] w-full h-[22px] tracking-[-0.5px] leading-normal text-[16px] text-center font-nunito-sans text-[#fff]">Contact us</p>
                 </button>
             </div>
         </div>
 
+        <!-- Gradient 1-->
+        <div class="gradient1 blur-[150px] top-[-110px] left-[17px] filter absolute max-w-[467px] overflow-hidden w-full h-[1233.793px] transform rotate-[-54.374deg] rounded-[233.5px]"></div>
+
+        <!-- Gradient yellow -->
+        <div class="gradient2 absolute top-[10px] right-[-20px] overflow-hidden max-w-[467px] w-full blur-[150px] h-[1399.298px] transform rotate-[65.712deg] rounded-[233.5px]"></div>
+
         <!-- Section 1 -->
-        <div class="flex gap-[32px]">
+        <div class="flex max-w-[1200px] w-full gap-[32px]">
             <div class="max-w-[582px] w-full">
                 <h1 class="max-w-[582px] mt-[230px] mb-[24px] w-full text-[80px] font-montserrat text-[#fff] font-extrabold leading-[84px]">Build Your Awesome Platform</h1>
                 <p class="max-w-[536px] mb-[50px] w-full text-custom font-normal font-nunito-sans text-[21px] leading-[39px] tracking-[-0.657px]">Enver studio is a digital studio that offers several services such as UI/UX Design to developers, we will provide the best service for those of you who use our services.</p>
-                <button class="flex items-center justify-center gap-[8px] max-w-[204px] w-full h-[58px] rounded-[4px] bg-[#5454D4]">
+                <button class="flex items-center hover:bg-[gray] justify-center gap-[8px] max-w-[204px] w-full h-[58px] rounded-[4px] bg-[#5454D4]">
                     <p class="text-[#fff] font-nunito-sans text-[20px] font-medium leading-normal">Our Services</p>
                     <img class="w-[24px] h-[24px]" src="images/arrow-right-up.svg" alt="">
                 </button>
             </div>
-            <div class="w-[780px] h-[780px] mt-[130px]">
+            <div class="max-w-[780px] w-full h-[780px] mt-[130px]">
                 <img class="relative right-[-68px]" src="images/Group 162549.svg" alt="">
             </div>
             <img class="absolute top-[231px] left-[652px] w-[95px] h-[28px]" src="images/Vector 13.svg" alt="">
@@ -53,18 +61,23 @@
             <div class="max-w-[588px] w-full"><h1 class="text-[#fff] font-nunito-sans text-[60px] font-[800] leading-[70px]">Why Enver Is The Best Choice?</h1></div>
             <div class="max-w-[588px]"><p class="text-custom font-nunito-sans text-[21px] leading-[39px] tracking-[-0.657px] font-extralight">Watch this one minute video so you understand why you should use our services!</p></div>
         </div>
+
         <!-- Video -->
         <div class="relative max-w-[1200px] mb-[150px] w-full">
             <img src="images/image 4.png" alt="">
             <img class="absolute top-[273px] left-[538px]" src="images/Play.svg" alt="">
         </div>
+
+        <!-- Gradient -->
+        <div class="gradient3 absolute top-[1793px] overflow-hidden left-[-193px] max-w-[467px] w-full h-[508.495px] transform rotate-[-54.374deg] rounded-[233.5px] blur-[150px]"></div>
+
         <!-- Cards -->
-        <div class="max-w-[1200px] w-full">
+        <div class="relative mb-[150px] w-full flex flex-col items-center gap-[50px]">
             <div>
                 <h1 class="max-w-[695px] w-full mx-auto text-[#fff] font-nunito-sans text-[60px] leading-[70px] font-bold text-center">The Service We Provide For You</h1>
             </div>
-            <div class="grid grid-cols-3 gap-x-[18px] gap-y-[18px]">
-                <div class="max-w-[384px] h-[300px] w-full flex flex-col justify-center items-center gap-[20px]">
+            <div class="grid grid-cols-3  gap-x-[18px] max-w-[1200px] w-full gap-y-[18px]">
+                <div class=" h-[300px] max-w-[384px] w-full flex flex-col justify-center items-center gap-[20px]">
                     <div class="w-[69px] bg-cbg rounded-[50%] h-[69px] flex items-center justify-center">
                         <img class="w-[32px] h-[32px]" src="images/code.svg" alt="">
                     </div>
@@ -73,45 +86,101 @@
                 </div>
                 <div class="max-w-[384px] h-[300px] w-full flex flex-col justify-center items-center gap-[20px]">
                     <div class="w-[69px] bg-cbgr rounded-[50%] h-[69px] flex items-center justify-center">
-                        <img class="w-[32px] h-[32px]" src="images/code.svg" alt="">
+                        <img class="w-[32px] h-[32px]" src="images/layer.svg" alt="">
                     </div>
-                    <h3 class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center">Development</h3>
-                    <p class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center">Create a platform with the best <br> and coolest quality from us.</p>
+                    <h3 class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center">UI/UX Designer</h3>
+                    <p class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center">We provide UI/UX Design services, and of course with the best quality</p>
                 </div>
                 <div class="max-w-[384px] h-[300px] w-full flex flex-col justify-center items-center gap-[20px]">
                     <div class="w-[69px] bg-cbgy rounded-[50%] h-[69px] flex items-center justify-center">
-                        <img class="w-[32px] h-[32px]" src="images/code.svg" alt="">
+                        <img class="w-[32px] h-[32px]" src="images/code2.svg" alt="">
                     </div>
-                    <h3 class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center">Development</h3>
-                    <p class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center">Create a platform with the best <br> and coolest quality from us.</p>
+                    <h3 class="max-w-[210px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center">Graphic Designer</h3>
+                    <p class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center">We provide Graphic Design services, with the best designers</p>
                 </div>
                 <div class="max-w-[384px] h-[300px] w-full flex flex-col justify-center items-center gap-[20px]">
                     <div class="w-[69px] bg-cbgy rounded-[50%] h-[69px] flex items-center justify-center">
-                        <img class="w-[32px] h-[32px]" src="images/code.svg" alt="">
+                        <img class="w-[32px] h-[32px]" src="images/code3.svg" alt="">
                     </div>
-                    <h3 class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center">Development</h3>
+                    <h3 class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center">Motion Graphik</h3>
                     <p class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center">Create a platform with the best <br> and coolest quality from us.</p>
                 </div>
                 <div class="max-w-[384px] h-[300px] w-full flex flex-col justify-center items-center gap-[20px]">
                     <div class="w-[69px] bg-cbg rounded-[50%] h-[69px] flex items-center justify-center">
-                        <img class="w-[32px] h-[32px]" src="images/code.svg" alt="">
+                        <img class="w-[32px] h-[32px]" src="images/camera.svg" alt="">
                     </div>
-                    <h3 class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center">Development</h3>
-                    <p class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center">Create a platform with the best <br> and coolest quality from us.</p>
+                    <h3 class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center">Photography</h3>
+                    <p class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center">We provide Photography services, and of course with the best quality</p>
                 </div>
                 <div class="max-w-[384px] h-[300px] w-full flex flex-col justify-center items-center gap-[20px]">
                     <div class="w-[69px] bg-cbgr rounded-[50%] h-[69px] flex items-center justify-center">
-                        <img class="w-[32px] h-[32px]" src="images/code.svg" alt="">
+                        <img class="w-[32px] h-[32px]" src="images/video-play.svg" alt="">
                     </div>
-                    <h3 class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center">Development</h3>
+                    <h3 class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center">Videography</h3>
                     <p class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center">Create a platform with the best <br> and coolest quality from us.</p>
                 </div>
             </div>
+            <img class="absolute top-[-30px] left-[180px]" src="images/Group 162528.svg" alt="">
+            <img class="w-[42px] absolute left-[1275px] top-[87px] h-[42px] transform rotate-[-31.418deg]" src="images/add.png" alt="">
         </div>
-        <!---->
-        <div></div>
-        <!---->
-        <div></div>
+            <img class="absolute w-[42px] h-[42px] left-[100px] top-[2850px] transform rotate-[25.344deg]" src="images/add.png" alt="">
+
+        <!-- Gradient -->
+        <div class="gradient4 absolute top-[1378px] max-w-[860.002px] w-full h-[2576.87px] transform rotate-[65.712deg] rounded-[233.5px] blur-[150px]"></div>
+
+        <!-- Cards 2 -->
+        <div class="max-w-[1200px] w-full mb-[169px] relative">
+            <div class="mb-[70px]">
+                <h1 class="text-[#fff] font-nunito-sans text-[58px] font-bold leading-normal">Our Awesome Portfolio</h1>
+            </div>
+            <div class="flex gap-[24px]">
+                <div class="max-w-[384px] mb-[174px] h-[301px] w-full rounded-[14px] flex items-center justify-center bg-[#1E1E20]">
+                    <img class="w-[336px] h-[253px]" src="images/squid.png" alt="">
+                </div>
+                <div class="max-w-[384px] mt-[58px] h-[301px] w-full rounded-[14px] flex items-center justify-center bg-[#1E1E20]">
+                    <img class="w-[336px] h-[253px]" src="images/sofa.png" alt="">
+                </div>
+                <div class="max-w-[384px] mt-[116px] h-[301px] w-full rounded-[14px] flex items-center justify-center bg-[#1E1E20]">
+                    <img class="w-[336px] h-[253px]" src="images/image 30.png" alt="">
+                </div>
+            </div>
+            <img class="absolute left-[565px]" src="images/nav.svg" alt="">
+            <img class="h-[72.941px] w-[62px] top-[35px] right-[43px]  absolute" src="images/Group 162529.svg" alt="">
+        </div>
+            <img class="absolute left-[74px] top-[3620px]" src="images/Vector 13.svg" alt="">
+        
+        <!--Gradient-->
+        <div class="gradient5  blur-[150px] max-w-[599.578px] absolute top-[2825px] right-[-283px] w-full h-[652.853px] rounded-[233.5px] transform rotate-[65.712deg]"></div>
+
+        <!-- Last Section -->
+        <div class="w-full bg-cbgg mb-[50px]">
+            <div class="flex relative max-w-[1440px] w-full h-[506px] gap-[173px] justify-center items-center">
+                <div>
+                    <h1 class="text-[#fff] max-w-[826px] w-full font-nunito-sans text-[60px] font-bold leading-normal">Contact us for the service you want to use</h1>
+                </div>
+                <div>
+                    <button class="w-[201px] h-[60px] rounded-[5px] hover:bg-[gray] bg-[#5454D4] text-white flex items-center"><p class="max-w-[201px] w-full text-[21px] font-semibold leading-normal font-nunito-sans">Contact us</p></button>
+                </div>
+                <img class="absolute top-[69px] right-[130px]" src="images/add.png" alt="">
+                <img class="absolute bottom-[64px] left-[158px]" src="images/Group 162531.svg" alt="">
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <div class="max-w-[1200px] w-full flex items-center justify-center mb-[101px]">
+            <div class="flex mr-[252px] gap-[8px] items-center max-w-[132px] w-full">
+                <a href=""><img class="w-[40px] h-[40px]" src="images/Logo Icon 1.svg" alt=""></a>
+                <a href=""><h1 class="text-[#fff] max-w-[84px] w-full h-[39px] font-montserrat text-[28px] font-bold leading-[140%]">Enver</h1></a>
+            </div>
+            <div class="max-w-[432px] mr-[99px] flex gap-[40px] w-full text-custom text-center font-nunito-sans text-[18px] font-normal leading-normal">
+                <p class="hover:text-[red] cursor-pointer">Support</p>
+                <p class="hover:text-[red] cursor-pointer">Privacy Policy</p>
+                <p class="hover:text-[red] cursor-pointer">Terms and Conditions</p>
+            </div>
+            <div class="max-w-[285px] w-full text-custom text-right font-nunito-sans text-[16px] font-medium leading-[38px] tracking-[-0.5px]">
+                <p>&copy; 2020 Enver, All Rights Reserved</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
