--- a/Project/index.html
+++ b/Project/index.html
@@ -6,6 +6,7 @@
     <title>Enver</title>
     <link rel="stylesheet" href="output.css" />
     <link rel="stylesheet" href="gradient.css" />
+    <link rel="stylesheet" href="./fonts.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
