--- a/Project/index.html
+++ b/Project/index.html
@@ -212,12 +212,12 @@
         <img class="sm:hidden md:flex" src="images/image 4.png" alt="" />
         <img class="sm:visible md:hidden" src="images/small.png" alt="" />
         <img
-          class="absolute sm:hidden md:flex md:top-[130px] md:left-[320px] lg:top-[273px] lg:left-[538px]"
+          class="absolute sm:hidden md:flex inset-0 m-auto"
           src="images/Play.svg"
           alt=""
         />
         <img
-          class="absolute sm:top-[72px] md:hidden sm:left-[144px]"
+          class="absolute inset-0 m-auto md:hidden"
           src="images/small2.svg"
           alt=""
         />
@@ -238,10 +238,10 @@
           class="grid md:grid-cols-2 xl:grid-cols-3 gap-x-[18px] max-w-[1200px] w-full gap-y-[18px]"
         >
           <div
-            class="h-[300px] 2xl:max-w-[384px] 2xl:w-full flex flex-col justify-center items-center gap-[20px]"
+            class="2xl:max-w-[384px] 2xl:w-full flex flex-col justify-center items-center gap-[20px]"
           >
             <div
-              class="w-[69px] bg-cbg rounded-[50%] h-[69px] flex items-center justify-center"
+              class=" bg-cbg rounded-full mt-[48px] p-[18px] flex items-center justify-center"
             >
               <img class="w-[32px] h-[32px]" src="images/code.svg" alt="" />
             </div>
@@ -251,17 +251,17 @@
               Development
             </h3>
             <p
-              class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
+              class="max-w-[299px] w-full mb-[48px] text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
             >
               Create a platform with the best <br />
               and coolest quality from us.
             </p>
           </div>
           <div
-            class="2xl:max-w-[384px] h-[300px] 2xl:w-full flex flex-col justify-center items-center gap-[20px]"
+            class="2xl:max-w-[384px] 2xl:w-full flex flex-col justify-center items-center gap-[20px]"
           >
             <div
-              class="w-[69px] bg-cbgr rounded-[50%] h-[69px] flex items-center justify-center"
+              class="p-[18px] bg-cbgr rounded-full mt-[48px] flex items-center justify-center"
             >
               <img class="w-[32px] h-[32px]" src="images/layer.svg" alt="" />
             </div>
@@ -271,17 +271,17 @@
               UI/UX Designer
             </h3>
             <p
-              class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
+              class="max-w-[299px] w-full mb-[48px] text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
             >
               We provide UI/UX Design services, and of course with the best
               quality
             </p>
           </div>
           <div
-            class="2xl:max-w-[384px] h-[300px] 2xl:w-full flex flex-col justify-center items-center gap-[20px]"
+            class="2xl:max-w-[384px] 2xl:w-full flex flex-col justify-center items-center gap-[24px]"
           >
             <div
-              class="w-[69px] bg-cbgy rounded-[50%] h-[69px] flex items-center justify-center"
+              class=" bg-cbgy rounded-full mt-[48px]  p-[18px] flex items-center justify-center"
             >
               <img class="w-[32px] h-[32px]" src="images/code2.svg" alt="" />
             </div>
@@ -291,16 +291,16 @@
               Graphic Designer
             </h3>
             <p
-              class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
+              class="max-w-[299px] w-full mb-[48px] text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
             >
               We provide Graphic Design services, with the best designers
             </p>
           </div>
           <div
-            class="2xl:max-w-[384px] h-[300px] 2xl:w-full flex flex-col justify-center items-center gap-[20px]"
+            class="2xl:max-w-[384px] 2xl:w-full flex flex-col justify-center items-center gap-[20px]"
           >
             <div
-              class="w-[69px] bg-cbgy rounded-[50%] h-[69px] flex items-center justify-center"
+              class=" bg-cbgy rounded-full mt-[48px]  p-[18px] flex items-center justify-center"
             >
               <img class="w-[32px] h-[32px]" src="images/code3.svg" alt="" />
             </div>
@@ -310,17 +310,17 @@
               Motion Graphik
             </h3>
             <p
-              class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
+              class="max-w-[299px] w-full text-custom mb-[48px] font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
             >
               Create a platform with the best <br />
               and coolest quality from us.
             </p>
           </div>
           <div
-            class="2xl:max-w-[384px] h-[300px] 2xl:w-full flex flex-col justify-center items-center gap-[20px]"
+            class="2xl:max-w-[384px] 2xl:w-full flex flex-col justify-center items-center gap-[20px]"
           >
             <div
-              class="w-[69px] bg-cbg rounded-[50%] h-[69px] flex items-center justify-center"
+              class="p-[18px] bg-cbg rounded-full mt-[48px]  flex items-center justify-center"
             >
               <img class="w-[32px] h-[32px]" src="images/camera.svg" alt="" />
             </div>
@@ -330,17 +330,17 @@
               Photography
             </h3>
             <p
-              class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
+              class="max-w-[299px] w-full text-custom mb-[48px] font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
             >
               We provide Photography services, and of course with the best
               quality
             </p>
           </div>
           <div
-            class="2xl:max-w-[384px] h-[300px] 2xl:w-full flex flex-col justify-center items-center gap-[20px]"
+            class="2xl:max-w-[384px] 2xl:w-full flex flex-col justify-center items-center gap-[20px]"
           >
             <div
-              class="w-[69px] bg-cbgr rounded-[50%] h-[69px] flex items-center justify-center"
+              class="p-[18px] bg-cbgr rounded-full mt-[48px]  flex items-center justify-center"
             >
               <img
                 class="w-[32px] h-[32px]"
@@ -354,7 +354,7 @@
               Videography
             </h3>
             <p
-              class="max-w-[299px] w-full text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
+              class="max-w-[299px] w-full text-custom mb-[48px] font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
             >
               Create a platform with the best <br />
               and coolest quality from us.
@@ -418,19 +418,19 @@
           class="flex md:flex-wrap lg:flex-nowrap md:justify-center lg:justify-normal sm:hidden md:max-w-[1200px] md:w-full md:flex gap-[24px]"
         >
           <div
-            class="max-w-[384px] md:m-0 lg:mb-[174px] h-[301px] w-full rounded-[14px] flex items-center justify-center bg-[#1E1E20]"
+            class="max-w-[384px] p-[24px] h-fit w-full rounded-[14px] lg:mb-[166px] flex items-center justify-center bg-[#1E1E20]"
           >
-            <img class="w-[336px] h-[253px]" src="images/squid.png" alt="" />
+            <img class="" src="images/squid.png" alt="" />
           </div>
           <div
-            class="max-w-[384px] md:m-0 lg:mt-[58px] h-[301px] w-full rounded-[14px] flex items-center justify-center bg-[#1E1E20]"
+            class="max-w-[384px] h-fit p-[24px]  md:m-0 lg:mt-[60px] w-full rounded-[14px] flex items-center justify-center bg-[#1E1E20]"
           >
-            <img class="w-[336px] h-[253px]" src="images/sofa.png" alt="" />
+            <img class="" src="images/sofa.png" alt="" />
           </div>
           <div
-            class="max-w-[384px] md:m-0 lg:mt-[116px] h-[301px] w-full rounded-[14px] flex items-center justify-center bg-[#1E1E20]"
+            class="max-w-[384px] h-fit md:m-0  p-[24px]  lg:mt-[116px]  w-full rounded-[14px] flex items-center justify-center bg-[#1E1E20]"
           >
-            <img class="w-[336px] h-[253px]" src="images/image 30.png" alt="" />
+            <img class="" src="images/image 30.png" alt="" />
           </div>
         </div>
         <div
@@ -451,7 +451,7 @@
           </div>
         </div>
         <img
-          class="absolute lg:left-[565px] md:left-[425px] md:top-[829px] lg:top-[627px] sm:hidden md:flex"
+          class="absolute inset-0 mx-auto mt-auto bottom-[-30px] sm:hidden md:flex"
           src="images/nav.svg"
           alt=""
         />
