--- a/Project/index.html
+++ b/Project/index.html
@@ -21,7 +21,7 @@
     >
       <!-- Header -->
       <div
-        class="flex items-center justify-between mt-[42px] sm:max-w-[327px] sm:justify-between sm:w-full md:max-w-[1200px] mx-auto md:w-full"
+        class="flex items-center md:gap-[32px] lg:justify-between mt-[42px] sm:max-w-[327px] sm:justify-between sm:w-full md:max-w-[1200px] mx-auto md:w-full"
       >
         <div class="max-w-[132px] w-full flex gap-[8px]">
           <img class="w-[40px] h-[40px]" src="images/Logo Icon 1.svg" alt="" />
@@ -31,9 +31,9 @@
             Enver
           </h1>
         </div>
-        <div class="max-w-[401px] sm:hidden md:flex w-full flex gap-[40px]">
+        <div class="max-w-[401px] sm:hidden md:flex w-full flex md:gap-[30px] lg:gap-[40px]">
           <p
-            class="font-nunito-sans text-[18px] cursor-pointer text-[#5454D4] hover:text-[white] font-medium leading-normal tracking-[-0.5px]"
+            class="font-nunito-sans md:text-[16px] lg:text-[18px] cursor-pointer text-[#5454D4] hover:text-[white] font-medium leading-normal tracking-[-0.5px]"
           >
             Home
           </p>
