--- a/Project/index.html
+++ b/Project/index.html
@@ -21,7 +21,7 @@
     >
       <!-- Header -->
       <div
-        class="flex items-center md:gap-[32px] lg:justify-between mt-[42px] sm:max-w-[327px] sm:justify-between sm:w-full md:max-w-[1200px] mx-auto md:w-full"
+        class="flex items-center md:gap-[32px] lg:justify-between mt-[42px]  sm:justify-between sm:w-full md:max-w-[1200px] mx-auto md:w-full"
       >
         <div class="max-w-[132px] w-full flex gap-[8px]">
           <img class="w-[40px] h-[40px]" src="images/Logo Icon 1.svg" alt="" />
@@ -78,19 +78,19 @@
           class="lg:max-w-[582px] md:max-w-[400px] lg:items-start sm:flex sm:flex-col sm:items-center lg:flex-none md:w-full"
         >
           <h1
-            class="md:max-w-[582px] sm:max-w-[327px] sm:w-full md:text-[33px] sm:text-[42px] sm:leading-[62px] lg:mt-[230px] sm:mt-[66px] mb-[24px] lg:w-full lg:text-[80px] font-graphik-bold text-[#fff] font-bold lg:leading-[84px]"
+            class="md:max-w-[582px] sm:w-full md:text-[33px] sm:text-[42px] sm:leading-[62px] lg:mt-[230px] sm:mt-[66px] mb-[24px] lg:w-full lg:text-[80px] font-graphik-bold text-[#fff] font-bold lg:leading-[84px]"
           >
             Build Your Awesome Platform
           </h1>
           <p
-            class="md:max-w-[536px] mb-[50px] md:w-full text-custom font-normal font-graphik md:text-[21px] md:leading-[39px] md:tracking-[-0.657px] sm:text-[16px] sm:leading-[150%] sm:max-w-[327px] w-full"
+            class="md:max-w-[536px] mb-[50px] md:w-full text-custom font-normal font-graphik md:text-[21px] md:leading-[39px] md:tracking-[-0.657px] sm:text-[16px] sm:leading-[150%] w-full"
           >
             Enver studio is a digital studio that offers several services such
             as UI/UX Design to developers, we will provide the best service for
             those of you who use our services.
           </p>
           <button
-            class="flex sm:self-start sm:ml-[22px] md:ml-0 items-center hover:bg-[gray] justify-center gap-[8px] max-w-[204px] w-full h-[58px] sm:rounded-none md:rounded-[4px] bg-[#5454D4]"
+            class="flex sm:self-start  md:ml-0 items-center hover:bg-[gray] justify-center gap-[8px] max-w-[204px] w-full h-[58px] sm:rounded-none md:rounded-[4px] bg-[#5454D4]"
           >
             <p
               class="text-[#fff] font-nunito-sans text-[20px] font-medium leading-normal"
@@ -185,19 +185,19 @@
         class="sm:flex sm:flex-wrap sm:justify-center lg:flex-nowrap lg:justify-normal md:mb-[30px] lg:mb-[50px] mt-[20px] sm:gap-[30px] lg:gap-[24px]"
       >
         <div
-          class="lg:max-w-[588px] md:max-w-[620px] md:w-full md:text-center lg:text-start lg:w-full sm:max-w-[327px] sm:w-full"
+          class="lg:max-w-[588px] md:max-w-[620px] md:w-full md:text-center lg:text-start lg:w-full sm:w-full"
         >
           <h1
-            class="text-[#fff] font-nunito-sans md:text-[41px] lg:text-[60px] md:font-[800] sm:text-[36px] sm:leading-[150%] sm:font-bold md:leading-[70px]"
+            class="text-[#fff] font-nunito-sans md:text-[41px] lg:text-[60px] sm:text-center md:font-[800] sm:text-[36px] sm:leading-[150%] sm:font-bold md:leading-[70px]"
           >
             Why Enver Is The Best Choice?
           </h1>
         </div>
         <div
-          class="lg:max-w-[588px] md:max-w-[620px] md:w-full md:text-center lg:text-start lg:w-full sm:max-w-[327px] sm:w-full"
+          class="lg:max-w-[588px] md:max-w-[620px] md:w-full md:text-center lg:text-start lg:w-full sm:text-center sm:w-full"
         >
           <p
-            class="text-custom font-nunito-sans sm:text-[16px] sm:leading-[150%] sm:font-extralight md:text-[21px] md:leading-[39px] md:tracking-[-0.657px] md:font-extralight"
+            class="text-custom font-nunito-sans sm:text-[16px] sm:mb-[30px] sm:leading-[150%] sm:font-extralight md:text-[21px] md:leading-[39px] md:tracking-[-0.657px] md:font-extralight"
           >
             Watch this one minute video so you understand why you should use our
             services!
@@ -229,7 +229,7 @@
       >
         <div>
           <h1
-            class="md:max-w-[695px] sm:max-w-[327px] sm:w-full sm:text-[36px] sm:text-start sm:font-bold sm:leading-[54px] md:w-full mx-auto text-[#fff] font-graphik-bold md:text-[45px] lg:text-[60px] md:leading-[70px] md:font-bold md:text-center"
+            class="md:max-w-[695px] sm:w-full sm:text-[36px] sm:text-start sm:font-bold sm:leading-[54px] md:w-full mx-auto text-[#fff] font-graphik-bold md:text-[45px] lg:text-[60px] md:leading-[70px] md:font-bold md:text-center"
           >
             The Service We Provide For You
           </h1>
@@ -406,7 +406,7 @@
         class="max-w-[1200px] relative sm:flex sm:flex-col sm:items-center md:flex-none w-full sm:mb-[140px] md:mb-[100px] lg:mb-[169px]"
       >
         <div
-          class="md:mb-[70px] sm:mb-[50px] md:max-w-[1200px] md:w-full sm:max-w-[327px] sm:w-full"
+          class="md:mb-[70px] sm:mb-[50px] md:max-w-[1200px] md:w-full  sm:w-full"
         >
           <h1
             class="text-[#fff] md:text-center lg:text-start font-graphik-bold md:text-[45px] lg:text-[58px] sm:text-[36px] sm:font-semibold sm:leading-[150%] md:font-bold md:leading-normal"
@@ -479,11 +479,11 @@
       <!-- Last Section -->
       <div class="w-full bg-cbgg mb-[50px]">
         <div
-          class="md:flex md:text-center mx-auto md:max-w-[826px] sm:max-w-[327px] w-full md:h-[70vh] lg:text-start lg:flex-row sm:flex sm:flex-col md:flex-col sm:items-center relative lg:max-w-[1440px] lg:w-full lg:h-[40vh] lg:gap-[173px] sm:gap-[50px] justify-center items-center"
+          class="md:flex md:text-center mx-auto md:max-w-[826px]  w-full md:h-[70vh] lg:text-start lg:flex-row sm:flex sm:flex-col md:flex-col sm:items-center relative lg:max-w-[1440px] lg:w-full lg:h-[40vh] lg:gap-[173px] sm:gap-[50px] justify-center items-center"
         >
           <div>
             <h1
-              class="text-[#fff] md:max-w-[826px] md:text-[39px] md:w-full font-graphik-bold lg:text-[60px] sm:max-w-[327px] sm:w-full sm:text-[36px] sm:font-bold sm:leading-[150%] md:font-bold md:leading-normal"
+              class="text-[#fff] md:max-w-[826px] md:text-[39px] md:w-full font-graphik-bold lg:text-[60px]  sm:w-full sm:text-[36px] sm:font-bold sm:leading-[150%] md:font-bold md:leading-normal"
             >
               Contact us for the service you want to use
             </h1>
