--- a/Project/index.html
+++ b/Project/index.html
@@ -17,11 +17,11 @@
   <body class="w-full bg-[#19191B] mx-auto">
     <!--MAIN-->
     <div
-      class="w-full overflow-hidden p-8 relative mx-auto flex flex-col items-center"
+      class="w-full overflow-hidden md:p-8 relative mx-auto flex flex-col items-center"
     >
       <!-- Header -->
       <div
-        class="flex items-center md:gap-[32px] lg:justify-between mt-[42px]  sm:justify-between sm:w-full md:max-w-[1200px] mx-auto md:w-full"
+        class="flex items-center sm:px-6 sm:mt-[44px] md:gap-[32px] lg:justify-between md:mt-[16px]  sm:justify-between sm:w-full md:max-w-[1200px] mx-auto md:w-full"
       >
         <div class="max-w-[132px] w-full flex gap-[8px]">
           <img class="w-[40px] h-[40px]" src="images/Logo Icon 1.svg" alt="" />
@@ -70,7 +70,7 @@
       </div>
 
       <!-- Section 1 -->
-      <div class="max-w-[1440px] w-full relative">
+      <div class="max-w-[1440px] sm:px-6 w-full relative">
       <div
         class="md:mb-[100px] mx-auto lg:mb-0 md:flex md:flex-row max-w-[1200px] md:items-start sm:items-center sm:justify-center sm:flex-wrap sm:flex sm:flex-col md:flex-nowrap w-full gap-[32px]"
       >
@@ -90,10 +90,10 @@
             those of you who use our services.
           </p>
           <button
-            class="flex sm:self-start  md:ml-0 items-center hover:bg-[gray] justify-center gap-[8px] max-w-[204px] w-full h-[58px] sm:rounded-none md:rounded-[4px] bg-[#5454D4]"
+            class="flex sm:self-start sm:max-w-[166px]  md:ml-0 items-center hover:bg-[gray] justify-center gap-[8px] md:max-w-[204px] w-full sm:h-[44px] md:h-[58px] sm:rounded-none md:rounded-[4px] bg-[#5454D4]"
           >
             <p
-              class="text-[#fff] font-nunito-sans text-[20px] font-medium leading-normal"
+              class="text-[#fff] font-nunito-sans sm:text-[16.089px] md:text-[20px]  font-medium leading-normal"
             >
               Our Services
             </p>
@@ -182,19 +182,19 @@
 
       <!-- Text -->
       <div
-        class="sm:flex sm:flex-wrap sm:justify-center lg:flex-nowrap lg:justify-normal md:mb-[30px] lg:mb-[50px] mt-[20px] sm:gap-[30px] lg:gap-[24px]"
+        class="sm:flex sm:px-6 sm:flex-wrap sm:justify-center lg:flex-nowrap lg:justify-normal md:mb-[30px] lg:mb-[50px] mt-[20px] sm:gap-[30px] lg:gap-[24px]"
       >
         <div
           class="lg:max-w-[588px] md:max-w-[620px] md:w-full md:text-center lg:text-start lg:w-full sm:w-full"
         >
           <h1
-            class="text-[#fff] font-nunito-sans md:text-[41px] lg:text-[60px] sm:text-center md:font-[800] sm:text-[36px] sm:leading-[150%] sm:font-bold md:leading-[70px]"
+            class="text-[#fff] font-nunito-sans md:text-[41px] lg:text-[60px] md:font-[800] sm:text-[36px] sm:leading-[150%] sm:font-bold md:leading-[70px]"
           >
             Why Enver Is The Best Choice?
           </h1>
         </div>
         <div
-          class="lg:max-w-[588px] md:max-w-[620px] md:w-full md:text-center lg:text-start lg:w-full sm:text-center sm:w-full"
+          class="lg:max-w-[588px] md:max-w-[620px] md:w-full md:text-center lg:text-start lg:w-full sm:w-full"
         >
           <p
             class="text-custom font-nunito-sans sm:text-[16px] sm:mb-[30px] sm:leading-[150%] sm:font-extralight md:text-[21px] md:leading-[39px] md:tracking-[-0.657px] md:font-extralight"
@@ -207,7 +207,7 @@
 
       <!-- Video -->
       <div
-        class="relative md:max-w-[1200px] sm:mb-[140px] md:mb-[150px] md:w-full"
+        class="relative sm:px-6 md:max-w-[1200px] sm:mb-[140px] md:mb-[150px] md:w-full"
       >
         <img class="sm:hidden md:flex" src="images/image 4.png" alt="" />
         <img class="sm:visible md:hidden" src="images/small.png" alt="" />
@@ -229,7 +229,7 @@
       >
         <div>
           <h1
-            class="md:max-w-[695px] sm:w-full sm:text-[36px] sm:text-start sm:font-bold sm:leading-[54px] md:w-full mx-auto text-[#fff] font-graphik-bold md:text-[45px] lg:text-[60px] md:leading-[70px] md:font-bold md:text-center"
+            class="md:max-w-[695px] sm:px-6 sm:w-full sm:text-[36px] sm:text-start sm:font-bold sm:leading-[54px] md:w-full mx-auto text-[#fff] font-graphik-bold md:text-[45px] lg:text-[60px] md:leading-[70px] md:font-bold md:text-center"
           >
             The Service We Provide For You
           </h1>
@@ -246,12 +246,12 @@
               <img class="w-[32px] h-[32px]" src="images/code.svg" alt="" />
             </div>
             <h3
-              class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center"
+              class="max-w-[199px] w-full font-nunito-sans sm:text-[24px] md:text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center"
             >
               Development
             </h3>
             <p
-              class="max-w-[299px] w-full mb-[48px] text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
+              class="max-w-[299px] w-full mb-[48px] text-custom font-nunito-sans sm:text-[16px] md:text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
             >
               Create a platform with the best <br />
               and coolest quality from us.
@@ -266,12 +266,12 @@
               <img class="w-[32px] h-[32px]" src="images/layer.svg" alt="" />
             </div>
             <h3
-              class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center"
+              class="max-w-[199px] w-full font-nunito-sans sm:text-[24px] md:text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center"
             >
               UI/UX Designer
             </h3>
             <p
-              class="max-w-[299px] w-full mb-[48px] text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
+              class="max-w-[299px] w-full mb-[48px] text-custom font-nunito-sans sm:text-[16px] md:text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
             >
               We provide UI/UX Design services, and of course with the best
               quality
@@ -286,12 +286,12 @@
               <img class="w-[32px] h-[32px]" src="images/code2.svg" alt="" />
             </div>
             <h3
-              class="max-w-[210px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center"
+              class="max-w-[210px] w-full font-nunito-sans sm:text-[24px] md:text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center"
             >
               Graphic Designer
             </h3>
             <p
-              class="max-w-[299px] w-full mb-[48px] text-custom font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
+              class="max-w-[299px] w-full mb-[48px] text-custom sm:text-[16px] font-nunito-sans md:text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
             >
               We provide Graphic Design services, with the best designers
             </p>
@@ -305,12 +305,12 @@
               <img class="w-[32px] h-[32px]" src="images/code3.svg" alt="" />
             </div>
             <h3
-              class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center"
+              class="max-w-[199px] w-full font-nunito-sans sm:text-[24px] md:text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center"
             >
               Motion Graphik
             </h3>
             <p
-              class="max-w-[299px] w-full text-custom mb-[48px] font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
+              class="max-w-[299px] w-full text-custom mb-[48px] sm:text-[16px] font-nunito-sans md:text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
             >
               Create a platform with the best <br />
               and coolest quality from us.
@@ -325,12 +325,12 @@
               <img class="w-[32px] h-[32px]" src="images/camera.svg" alt="" />
             </div>
             <h3
-              class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center"
+              class="max-w-[199px] w-full font-nunito-sans sm:text-[24px] md:text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center"
             >
               Photography
             </h3>
             <p
-              class="max-w-[299px] w-full text-custom mb-[48px] font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
+              class="max-w-[299px] w-full text-custom sm:text-[16px] mb-[48px] font-nunito-sans md:text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
             >
               We provide Photography services, and of course with the best
               quality
@@ -349,12 +349,12 @@
               />
             </div>
             <h3
-              class="max-w-[199px] w-full font-nunito-sans text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center"
+              class="max-w-[199px] w-full font-nunito-sans sm:text-[24px] md:text-[28px] text-[#fff] font-medium leading-normal tracking-[-0.75px] text-center"
             >
               Videography
             </h3>
             <p
-              class="max-w-[299px] w-full text-custom mb-[48px] font-nunito-sans text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
+              class="max-w-[299px] w-full text-custom mb-[48px] sm:text-[16px] font-nunito-sans md:text-[20px] font-normal leading-[28px] tracking-[-0.5px] text-center"
             >
               Create a platform with the best <br />
               and coolest quality from us.
@@ -367,7 +367,7 @@
           alt=""
         />
         <img
-          class="absolute sm:visible md:hidden left-[20px] top-[-75px]"
+          class="absolute sm:visible md:hidden left-[-5px] top-[-75px]"
           src="images/playsmall.svg"
           alt=""
         />
@@ -397,7 +397,7 @@
         ></div>
         <!-- Gradient 4 -->
         <div
-          class="gradient4 absolute top-[10px] left-[255px] max-w-[860.002px] w-full h-[1117.86px] transform rotate-[65.712deg] rounded-[233.5px] blur-[150px]"
+          class="gradient4 absolute sm:hidden md:flex top-[10px] left-[255px] max-w-[860.002px] w-full h-[1117.86px] transform rotate-[65.712deg] rounded-[233.5px] blur-[150px]"
         ></div>
       </div>
 
@@ -409,7 +409,7 @@
           class="md:mb-[70px] sm:mb-[50px] md:max-w-[1200px] md:w-full  sm:w-full"
         >
           <h1
-            class="text-[#fff] md:text-center lg:text-start font-graphik-bold md:text-[45px] lg:text-[58px] sm:text-[36px] sm:font-semibold sm:leading-[150%] md:font-bold md:leading-normal"
+            class="text-[#fff] sm:px-6 md:text-center lg:text-start font-graphik-bold md:text-[45px] lg:text-[58px] sm:text-[36px] sm:font-semibold sm:leading-[150%] md:font-bold md:leading-normal"
           >
             Our Awesome Portfolio
           </h1>
@@ -470,9 +470,10 @@
           src="images/vectorsmall.svg"
           alt=""
         />
+        <img class="absolute sm:visible md:hidden top-[57px] right-[30px] rotate-[-20.887deg]" src="images/circlesmall.svg" alt="">
         <!--Gradient 5-->
         <div
-          class="gradient5 blur-[150px] max-w-[599.578px] absolute top-[-244px] right-[-183px] w-full h-[652.853px] rounded-[233.5px] transform rotate-[65.712deg]"
+          class="gradient5 blur-[150px] sm:hidden md:flex max-w-[599.578px] absolute top-[-244px] right-[-183px] w-full h-[652.853px] rounded-[233.5px] transform rotate-[65.712deg]"
         ></div>
       </div>
 
@@ -483,17 +484,17 @@
         >
           <div>
             <h1
-              class="text-[#fff] md:max-w-[826px] md:text-[39px] md:w-full font-graphik-bold lg:text-[60px]  sm:w-full sm:text-[36px] sm:font-bold sm:leading-[150%] md:font-bold md:leading-normal"
+              class="text-[#fff] sm:px-6 md:max-w-[826px] md:text-[39px] md:w-full font-graphik-bold lg:text-[60px]  sm:w-full sm:text-[36px] sm:font-bold sm:leading-[150%] md:font-bold md:leading-normal"
             >
               Contact us for the service you want to use
             </h1>
           </div>
-          <div class="sm:flex md:m-0 md:self-center md:flex-none sm:self-start">
+          <div class="sm:flex sm:px-6 md:m-0 md:self-center md:flex-none sm:self-start">
             <button
-              class="w-[201px] h-[60px] rounded-[5px] hover:bg-[gray] bg-[#5454D4] text-white flex items-center"
+              class="md:w-[201px] sm:w-[166px] sm:pl-[32px] sm:pr-[36px] sm:h-[44px] md:h-[60px] rounded-[5px] hover:bg-[gray] bg-[#5454D4] text-white flex items-center"
             >
               <p
-                class="max-w-[201px] w-full text-[21px] font-semibold leading-normal font-nunito-sans"
+                class="max-w-[201px] w-full  sm:text-[16px] md:text-[21px] font-semibold leading-normal font-nunito-sans"
               >
                 Contact us
               </p>
@@ -515,7 +516,7 @@
             alt=""
           />
           <img
-            class="bottom-[-60px] sm:visible md:hidden absolute left-[9px]"
+            class="bottom-[-60px] sm:visible md:hidden absolute left-[10px]"
             src="images/circlesmall.svg"
             alt=""
           />
@@ -524,7 +525,7 @@
 
       <!-- Footer -->
       <div
-        class="max-w-[1200px] sm:hidden md:flex lg:flex-row md:flex-col md:gap-[15px] w-full items-center justify-center md:mb-[30px] lg:mb-[101px]"
+        class="max-w-[1200px] sm:hidden md:flex lg:flex-row md:flex-col md:gap-[15px] w-full items-center justify-center md:mb-[30px] lg:mb-[69px]"
       >
         <div
           class="flex lg:mr-[252px] md:mr-0 gap-[8px] items-center max-w-[132px] w-full"
@@ -554,11 +555,11 @@
         </div>
       </div>
       <div
-        class="max-w-[269px] flex-col gap-[40px] sm:visible md:hidden w-full flex items-center justify-center mb-[101px]"
+        class="max-w-[269px] flex-col gap-[40px] pb-8 sm:visible md:hidden w-full flex items-center justify-center mb-[18px]"
       >
         <div class="flex gap-[8px] items-center max-w-[132px] w-full">
           <a href=""
-            ><img class="w-[40px] h-[40px]" src="images/logosmall.png" alt=""
+            ><img class="w-[40px] h-[40px]" src="images/Logo Icon 1.svg" alt=""
           /></a>
           <a href=""
             ><h1
@@ -580,7 +581,7 @@
           </p>
         </div>
         <div
-          class="max-w-[269px] w-full text-center text-white font-nunito-sans text-[16px] font-normal leading-[28px]"
+          class="max-w-[269px] w-full text-center text-white font-nunito-sans text-[18px] font-normal leading-[28px]"
         >
           <p>&copy;2020 Enver, All Rights Reserved</p>
         </div>
